--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,9 +8,9 @@ updates:
   - package-ecosystem: "npm" # See documentation for possible values
     directory: "/ClientApp" # Location of package manifests
     schedule:
-      interval: "daily"
+      interval: "weekly"
       
   - package-ecosystem: "nuget" # See documentation for possible values
     directory: "/" # Location of package manifests
     schedule:
-      interval: "daily"
+      interval: "weekly"
